# agda2stg

./: README.md  agda2stg.cabal
hsbits/: Main.hs
src/: Main.hs
src/Agda/Compiler/: ToStg.hs
test/: First.stg  Hello.agda  Simplest.agda  Simplest.stg
